# Fleet-Command-Center

./: .gitignore  .vercelignore  README.md  docker-compose.yml  go.work  package-lock.json  package.json  vercel.json
.kiro/specs/fleet-command-center/: .config.kiro  design.md  requirements.md  tasks.md
apps/customer/: Dockerfile  pubspec.yaml
apps/customer/lib/: main.dart
apps/customer/test/: live_position_test.dart  tracking_state_property_test.dart
apps/dashboard/: Dockerfile  index.html  package.json  tsconfig.json  vite.config.ts
apps/dashboard/public/: palette.json
apps/dashboard/src/: main.tsx
apps/dashboard/src/auth/: rbac.ts
apps/driver/: Dockerfile  pubspec.yaml
apps/driver/lib/: main.dart
apps/driver/test/: ping_cadence_test.dart  ping_queue_property_test.dart
services/geofence/: Dockerfile  go.mod  main.go
services/ingestion/: Dockerfile  go.mod  main.go
services/management/: Dockerfile  jest.config.cjs  package.json  tsconfig.json
services/management/migrations/: 0001_core_relational_tables.down.sql  0001_core_relational_tables.up.sql  0002_geospatial_tables.down.sql  0002_geospatial_tables.up.sql  0003_delivery_status_history_retention.down.sql  0003_delivery_status_history_retention.up.sql  README.md
services/management/src/: main.ts
services/optimizer/: Dockerfile  conftest.py  pyproject.toml
services/optimizer/optimizer/: __init__.py  main.py  solver.py  testing.py
services/optimizer/tests/: test_optimize_e2e.py  test_pbt_smoke.py  test_property_28_colocation.py
services/streaming/: Dockerfile  go.mod  go.sum  main.go
(+187 files in other folders)
