[project]
name = "fleet-route-optimizer"
version = "0.1.0"
description = "Stateless OR-Tools TSP route optimizer for Fleet Command Center"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "ortools>=9.9.3963",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "hypothesis>=6.100.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["optimizer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
